# finance-chatbot

./: .env  .gitignore  README.md  project-start.bat  pyproject.toml
.github/workflows/: requirements.txt  workflow.yml
backend/: .env  app.py  chromadb_setup.py  image_extractor.py  next_steps_graph.py
backend/chroma_db/: chroma.sqlite3
backend/chroma_db/94fada2e-4244-419b-b4a6-513477793e92/: index_metadata.pickle
backend/uploaded_documents/: Finance_Requirement_Checklist_Cohort_6_1_2025_and_later_.xlsx  Frequent_Advising_Questions.docx  LSB_-_FNCE_Checklist_Cohort_6_1_2024_-_5_31_2025.xlsx  webpages_for_FNCE_Bot.xlsx
backend/utils/: file_analyzer.py  response_generator.py
frontend/: requirements.txt  streamlit_app.py  user_database.json
frontend/.streamlit/: config.toml
frontend/components/: auth.py  chat.py  file_analysis.py  sidebar.py  upload.py
frontend/utils/: api_client.py
